# Arb_Sports_trader

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: schedule.py
src/sports_arb/: __init__.py  arb_engine.py  cli.py  config.py  models.py  scanner.py  trade_executor.py
src/sports_arb/alerts/: __init__.py  telegram.py
src/sports_arb/dashboard/: __init__.py  app.py
src/sports_arb/dashboard/static/: style.css
src/sports_arb/dashboard/templates/: index.html
src/sports_arb/odds_providers/: __init__.py  base.py  mock_provider.py  the_odds_api.py
tests/: test_alerts.py  test_arb_engine.py  test_dashboard.py  test_models.py  test_scanner.py  test_the_odds_api.py  test_trade_executor.py
